# kube-performance-predictor

./: .gitignore  CLAUDE.md  README.md  best_metric_forecaster.pth  experiments.yaml  main.py  predictor_config.yaml  pyproject.toml  sonar-project.properties  tune.py  tune_extrapolation.py
.github/workflows/: ci.yml
confs/: experiments.yaml  predictor.yaml  predictor_config.yaml
dataset/: performance_results_normal.csv  performance_results_overload.csv
datasets/: performance_results_overload.csv
docs/: ARCHITECTURE.md  EXPERIMENTS.md
kpp/: collector.py  config.py  csv_writer.py  gnn.ipynb  kubernetes_client.py  logging_config.py  main.py  pod_info_extractor.py  prediction.py  prometheus_client.py  sample.py  train.py
kpp/collector/: collector.py  config.py  csv_writer.py  kubernetes_client.py  main.py  prometheus_client.py  sample.py
kpp/predictor/: classification.py  classifier.py  config.py  data_loader.py  data_processor.py  generate_table.py  main.py  model.py  pipeline.py  plotting.py  train.py  visualizer.py
src/kube_performance_predictor/: __init__.py  collector.py  main.py
tests/: test_collector.py  test_data_loader.py  test_data_processor.py
tests/collector/: test_csv_writer.py  test_kubernetes_client.py  test_prometheus_client.py
tests/data/: correct_metrics.csv  incorrect_metrics.csv
tests/e2e/: test_predictor.py  test_predictor_e2e.py
tests/predictor/: test_classification.py  test_classifier.py  test_model.py  test_pipeline.py
tests/predictor/fixtures/: small_sample.csv
