[project]
name = "kube-performance-predictor"
version = "0.1.0"
description = "Master thesis project for Software: Science and Technology"
authors = [
    {name = "NicoPolazzi",email = "nicolo.polazzi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prometheus-api-client (>=0.6.0,<0.7.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "kube_performance_predictor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
